--- a/src/pug/comps/nav.pug
+++ b/src/pug/comps/nav.pug
@@ -26,3 +26,5 @@ div.nav
         a.on(href="./contactus.html") 聯絡我們
     else
         a(href="./contactus.html") 聯絡我們
+    //------------------------------------
+    a 線上預約
