首頁做到一半

--- a/src/pug/comps/banner.pug
+++ b/src/pug/comps/banner.pug
@@ -1,1 +1,4 @@
-div.banner banner
+div.banner(style="background-image:url(./images/banner-1.jpg)")
+    div.txt
+        img(src="./images/main-txt.svg")
+        
