--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,7 +6,7 @@ html
     include ./comps/header.pug
     body
         div.main-container            
-            +nav()
+            +nav('column')
             div.page-index
                 include ./comps/banner.pug
                 div.block 
