--- a/src/sass/comps/banner.sass
+++ b/src/sass/comps/banner.sass
@@ -13,6 +13,11 @@
             background-color: rgba(128, 44 , 44, 0.54 )
             position: absolute
             top:300px
+            width: 45%
             left:0
             padding: 50px 90px
+            @media screen and (max-width:1400px) 
+                padding: 30px 20px 30px 50px
+                img
+                    width: 90%
             
