--- a/src/sass/pages/index.sass
+++ b/src/sass/pages/index.sass
@@ -10,5 +10,5 @@
             .sub
                 font-family: 'Lato', sans-serif
                 font-weight: 400
-                color: #DDA869
+                color: #DDA869d
                 font-size: 24px
