--- a/src/pug/comps/banner.pug
+++ b/src/pug/comps/banner.pug
@@ -1,4 +1,6 @@
-div.banner(style="background-image:url(./images/banner-1.jpg)")
-    div.txt
-        img(src="./images/main-txt.svg")
-        
+div.banner-container
+    div.bannerBox.PS
+        div.banner(style="background-image:url(./images/banner-1.jpg)")
+            div.txt
+                img(src="./images/main-txt.svg" loading='lazy')
+            
