--- a/src/pug/comps/footer.pug
+++ b/src/pug/comps/footer.pug
@@ -1,7 +1,21 @@
 div.footer-container
-    div.box 
+    div.box.b1
         img(src="./images/footer-logo.svg")
-    div.box 2
-    div.box 3
+        p 立案號碼 桃市衛心字第 XY01110033號
+    div.box.b2
+        div.title 聯絡資訊
+        ul
+            li 心設計心理諮商所
+            li Wonderful design counseling center
+            li 03-4013311
+            li wdcc4013311@gmail.com
+            li 324 桃園市平鎮區文化街66-1號
+    div.box.b3
+        div.title 社群媒體
+        div 
+            a(href="https://facebook.com")
+                img.icon(src='./images/icon-line-w.svg')
+            a(href="https://facebook.com")
+                img.icon(src='./images/icon-fb-w.svg')
     
 footer Copyright © 2023 Wonderful Design Counseling Center All rights reserved.
