--- a/src/sass/comps/nav.sass
+++ b/src/sass/comps/nav.sass
@@ -11,6 +11,8 @@
 
 @mixin nav()
     .nav
+        width: 100%
+        max-width: 1600px
         height:210px
         display: flex
         justify-content: space-between
