--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -1,8 +1,10 @@
 //-公用組件
 include ./comps/components.pug
-
 doctype html
 html
     include ./comps/header.pug
-    div.blocker.block-1-1 about
-        +nav("about")
+    body
+        div.main-container            
+            +nav('about')
+            div.page-index
+                include ./comps/banner.pug
