--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,33 +1,48 @@
 //-公用組件
 include ./comps/components.pug
-
 doctype html
 html
     include ./comps/header.pug
     body
         div.main-container            
-            +nav('column')
+            +nav()
             div.page-index
-                include ./comps/banner.pug
+                +banner('./images/banner-1.jpg')
                 div.block 
-                    div.title 
+                    div.blocktitle 
                         span.sub Latest News
                         span 最新消息
-                div.block.y1
-                    div.title 
-                        span.sub RESERVATION PROCESS
-                        span 預約流程
-                div.block 
-                    div.title 
-                        span.sub OUR TEAM
-                        span 專業團隊
-                div.block.y1
-                    div.title 
-                        span.sub COLUMN
-                        span 文章專欄
+                    div.newsBox
+                        div.news
+                            div.time 2023-01-10
+                            div.txt 「心設計心理諮商所」即將開幕大家好，我們是桃園中壢成立的心設計心理諮商所。「心設計」是一家全人設計規劃的心理諮商所，一樓設計為兒童青少年心理發展服務，二樓規劃為成人心理諮商服務。期待透過空間的量身設計，能夠提供社區民眾容易親近的諮商服務，協助來訪者經營好關係、情緒、以及打造心之所向的生活。為了確保可以提供給來訪者舒適專業的服務，我們也期許自己能夠提供合作的夥伴一個穩定、受尊重的工作環境，讓心理師能夠專注在專業工作上，陪伴來訪者共同從心設計美好生活。
+                        div.news
+                            div.time 2023-01-10
+                            div.txt 「心設計心理諮商所」即將開幕大家好，我們是桃園中壢成立的心設計心理諮商所。「心設計」是一家全人設計規劃的心理諮商所，一樓設計為兒童青少年心理發展服務，二樓規劃為成人心理諮商服務。期待透過空間的量身設計，能夠提供社區民眾容易親近的諮商服務，協助來訪者經營好關係、情緒、以及打造心之所向的生活。為了確保可以提供給來訪者舒適專業的服務，我們也期許自己能夠提供合作的夥伴一個穩定、受尊重的工作環境，讓心理師能夠專注在專業工作上，陪伴來訪者共同從心設計美好生活。
+
                 div.block
-                    div.title 
-                        span.sub CONTACT US
-                        span 聯絡我們
+                    +title('預約流程', 'RESERVATION PROCESS')
+                    div
+                        +process()
+                    div.bFooter
+                        a.btn(href="./service.html") 線上預約
+
+                div.block
+                    +title('專業團隊', 'OUR TEAM')
+                    div
+                        +team()
+
+                div.block.y1
+                    +title('文章專欄', 'COLUMN')
+                    div
+                        +column(4)
+                    div.bFooter
+                        a.btn(href="./column.html") 更多文章 
+                
+                div.block
+                    +title('聯絡我們', 'CONTACT US')
+                    div
+                        +contactus()
+
             include ./comps/footer.pug 
                     
