--- a/src/pug/member.pug
+++ b/src/pug/member.pug
@@ -5,9 +5,8 @@ html
     include ./comps/header.pug
     body
         div.main-container            
-            +nav('column')
+            +nav('team')
             div.page-index
-                +banner('./images/banner-1.jpg')
-                +column(6)
+                +banner('./images/banner-1.jpg')                
+                div.block.y1 member
             include ./comps/footer.pug 
-                    
