--- a/src/sass/comps/banner.sass
+++ b/src/sass/comps/banner.sass
@@ -1,12 +1,34 @@
 //@use "sass:math"
 @mixin banner()
-    div.banner
+    div.banner-container
         width: 100%
-        max-width: 1600px
+        //max-width: 1600px
         height:750px
-        background-position: center center
-        background-size: cover
         position: relative
+        background-color: rgba(128, 44 , 44, 1 )
+        overflow: hidden
+        div.bannerBox
+            width: 100%
+            height: 100%
+            display: flex
+            justify-content: center
+            align-items: flex-start
+            &.PS
+                transition: 1s
+                animation-timing-function: ease-in
+            div.banner
+                width: 130%
+                height: 130%
+                background-position: center center
+                background-size: cover
+                animation-name: fadInAnim
+                animation-duration: 1s
+                @keyframes fadInAnim
+                    from 
+                        opacity: 0
+                    to 
+                        opacity: 1
+
         .txt
             border-top-right-radius: 34px
             border-bottom-right-radius: 34px
@@ -16,8 +38,12 @@
             width: 45%
             left:0
             padding: 50px 90px
+        
+            
+
             @media screen and (max-width:1400px) 
                 padding: 30px 20px 30px 50px
                 img
                     width: 90%
-            
+                
+                    
