--- a/src/sass/comps/footer.sass
+++ b/src/sass/comps/footer.sass
@@ -1,6 +1,8 @@
 //@use "sass:math"
 @mixin footer()
     .footer-container
+        font-weight: 300
+        width: 100%
         font-size: 24px
         padding:70px 0
         color:#fff
@@ -8,7 +10,32 @@
         justify-content: center
         background-color: #5D6055
         .box
-            flex: 0 1 33%
+            &.b1
+                flex: 0 1 600px
+                display: flex
+                flex-direction: column
+                align-items: center
+                img
+                    width: 360px
+                    margin-right: 60px
+            &.b2
+                flex: 0 1 600px
+            &.b3
+                flex: 0 1 300px
+            .title
+                font-weight: 500
+                font-size: 32px
+                margin-bottom: 32px
+                
+            ul
+                margin: 0
+                padding: 0
+                list-style: none
+                li
+                    margin-bottom: 12px
+                    
+            a
+                margin: 10px
     footer
         color:#707070
         font-size: 24px
