--- a/src/sass/pages/column.sass
+++ b/src/sass/pages/column.sass
@@ -1,3 +1,61 @@
 //@use "sass:math"
 @mixin column()
+    .columnBox
+        .column
+            display: flex
+            @media screen and (max-width:768px)
+                flex-direction: column
+            background-color: #fff                
+            margin-bottom: 50px
+            border:2px solid #bebebe
+            border-radius: 30px
+            font-size:24px
+            font-weight: 300
+            .left
+                display: flex
+                justify-content: center
+                padding: 32px
+                flex: 0 0 calc(35% - 64px)
+                .pic
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    width: 440px
+                    height: 280px
+                    @media screen and (max-width:1600px)
+                        width: 330px
+                        height: 210px
+
+                    //max-width: 440px
+                    border-radius: 20px
+                    overflow: hidden
+                    img
+                        transition: 1s
+                        width: 100%
+                        object-fit: cover
+
+            .right
+                padding: 32px
+                flex: 0 0 calc(65% - 64px)
+                .date
+                    margin-bottom: 20px
+                .title
+                    font-size:30px
+                    margin-bottom: 60px
+                .txtBox
+                    margin-bottom: 50px
+                    .txt
+                        width: 100%
+                        display: -webkit-box
+                        -webkit-box-orient: vertical
+                        -webkit-line-clamp: 4
+                        overflow: hidden
+
+                a.more,.date
+                    color:$mainColor
+            &:hover
+                .pic
+                    img
+                        width: 110%
+
     
