--- a/src/sass/pages/team.sass
+++ b/src/sass/pages/team.sass
@@ -1,4 +1,61 @@
 //@use "sass:math"
 @mixin team()
-    #group
+    .team
+        width: 100%
+    .teamBox
+        width: 100%
+        display: grid
+        grid-template-columns: 1fr 1fr 1fr 
+        
+        .member
+            color: #42495B
+            padding: 0 24px 160px 24px
+            width: calc(100% - 48px)
+            justify-self: center
+            display: flex
+            flex-direction: column
+            align-items: center
+            text-decoration: none
+            
+            .pic
+                display: flex
+                justify-content: center
+                align-items: center
+                //width: 100%
+                //max-width: 250px
+                width: 250px
+                height: 250px
+                clip-path: circle(49% at 50% 50%)
+                margin-bottom: 36px
+                img
+                    transition:1s
+                    width: 100%
+                    height: 100%
+                    object-fit: cover
+            &:hover
+                .pic
+                    img
+                        width: 110%
+                        height: 110%
+            .title
+                width: 100%
+                font-size: 38px
+                font-weight: 300
+                justify-self: center
+                display: flex
+                flex-direction: column
+                align-items: center
+                border-bottom: 2px solid #E0E0E0
+                padding-bottom: 24px
+                .sub
+                    font-size: 24px
+
+            .txt
+                padding: 24px 0
+                text-align: center
+                font-weight: 300
+                font-size: 21px
+                line-height: 34px
+                border-bottom: 2px solid #E0E0E0
+
     
